Añadidas pruebas inside-subscribe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
 <!-- <h1>Listado de posts</h1>
 <app-async-pipes-demo></app-async-pipes-demo>
 <hr>
-<br>
-<h2>Tema Zones</h2>
+<br> -->
+<!-- <h2>Tema Zones</h2>
 <app-zones></app-zones>
+<hr>  -->
+<!-- <h2>Http Client Demo</h2> -->
+<!-- <app-http-demo></app-http-demo>
 <hr> -->
-<!-- <h2>Http Client Demo</h2>
-<app-http-demo></app-http-demo>
-<hr> -->
-<app-book-ofline></app-book-ofline>
+<!-- <app-book-ofline></app-book-ofline> -->
+<h2>Inside subscribe</h2>
+<app-inside-subscribe></app-inside-subscribe>
